--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,37 @@
+body{
+  background: #F6F6F6;
+}
+
 .btn-grp input{
-  width: 40px;
-  height: 40px;
+  width: 60px;
+  height: 60px;
   margin-top: 5px;
+  font-weight: 600;
+}
+
+.btn-gp input{
+  width: 124px;
+  height: 60px;
+  margin-top: 5px;
+  font-weight: 600;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .all-calc{
-  margin: 15px auto auto 20px;
+  height: 395px;
+  width: 257px;
+  display: block;
+  margin: 160px auto;
+  background: white;
+  border: 2px solid gray;
+  border-radius: 10px;
+}
+
+#ip-text{
+  width: 252px;
+  text-align: right;
+  font-size: 40px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
